--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            color: red;
+            color: green;
             font-size: 100px;
             font-family: Arial, sans-serif;
         }
     </style>
 </head>
 <body>
-    NO
+    YES
 </body>
 </html>
